--- a/assets/styles.index.css
+++ b/assets/styles.index.css
@@ -8,7 +8,7 @@
 
 body  {
     font-family: "Merriweather" sans-serif;
-    background-color: aliceblue;
+    background-color: rgb(160, 118, 178);
 }
 
 h1 {
