--- a/assets/styles/styles.index.css
+++ b/assets/styles/styles.index.css
@@ -8,9 +8,10 @@
 
 body  {
     font-family: "Merriweather" sans-serif;
-    background-color: rgb(160, 118, 178);
+    background-color: rgb(255, 255, 255);
 }
 
-h1 {
-    text-align: center;
+header {
+    display: flex;
+    justify-content: space-around;
 }
