--- a/assets/styles/styles.index.css
+++ b/assets/styles/styles.index.css
@@ -8,10 +8,35 @@
 
 body  {
     font-family: "Merriweather" sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(200, 162, 211);
+    color: aliceblue;
 }
 
 header {
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
+    height: 150px;
+    background-color: rgb(180, 137, 203);
+    color: rgb(213, 196, 213);
+    align-items: center;
+}
+
+   #logo-img {
+    height: 100px;
+    width: 100px;
+    border-radius: 12px;
+   }
+
+   #links {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+   }
+
+
+#links a {
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 1.2rem;
 }
