--- a/assets/styles/styles.index.css
+++ b/assets/styles/styles.index.css
@@ -15,7 +15,6 @@ body  {
 header {
     display: flex;
     justify-content: space-around;
-    margin-top: 10px;
     height: 150px;
     background-color: rgb(180, 137, 203);
     color: rgb(213, 196, 213);
@@ -39,4 +38,12 @@ header {
     text-decoration: none;
     color: aliceblue;
     font-size: 1.2rem;
+    border-bottom: 3px solid transparent;
+border-radius: 6px;
+}
+
+#links a:hover {
+    border-bottom: 3px solid;
+    color: rgb(153, 123, 181);
+    transform: scale(1.01);
 }
